# Vk-ITA

./: README.md
Codice/01 - Init/: CMakeLists.txt
Codice/01 - Init/include/: vk_engine.hpp
Codice/01 - Init/src/: main.cpp  vk_engine.cpp
DirectX 12/Pratica/01 - Vettori/: 01 - Vettori.cpp  01 - Vettori.h  CMakeLists.txt
DirectX 12/Teoria/01 - Vettori/: 01 - Vettori.docx  02 - Operazioni sui Vettori.docx  03 - Angoli e Proiezioni Ortogonali - Copia.docx  03 - Angoli e Proiezioni Ortogonali.docx  04 - Ortogonalizzazione (Algoritmo di Gram-Schmidt).docx  04 - Ortogonalizzazione con prodotto scalare (Algoritmo di Gram-Schmidt).docx  05 - Ortogonalizzazione con prodotto vettoriale.docx  06 - Punti.docx
DirectX 12/Teoria/02 - Matrici/: 01 - Matrici.docx  02 - Operazioni su Matrici.docx
Documentazione API/: 00 - Copertina.docx  01 - Introduzione a Vulkan.docx  02 - Vulkan Objects.docx  03 - Flusso Applicativo ad Alto Livello in Vulkan.docx  04 - Disposizione del progetto.docx  05 - Setup Progetto.docx
Vulkan/01 - Setup iniziale/: CMakeLists.txt
Vulkan/01 - Setup iniziale/include/: vk_descriptors.hpp  vk_engine.hpp  vk_images.hpp  vk_init.hpp  vk_pipelines.hpp
Vulkan/01 - Setup iniziale/shaders/: gradient_pixels.comp.glsl
Vulkan/01 - Setup iniziale/src/: main.cpp  vk_descriptors.cpp  vk_engine.cpp  vk_images.cpp  vk_init.cpp  vk_pipelines.cpp
assets/01 - Vettori/: 01 - Vettori.md
